--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.lst
 build/
+ref/
 # Created by https://www.toptal.com/developers/gitignore/api/c
 # Edit at https://www.toptal.com/developers/gitignore?templates=c
 
